toolchain/ouro_parse/snapshots/ouro_parse_test__call_call.snap
---
source: toolchain/ouro_parse/ouro_parse_test.rs
expression: "case! { const CallCall = foo()(); }"
---
FileBegin
Const "const" 0..5
ConstIdent "CallCall" 6..14
ConstEq "=" 15..16
Expr(Ident) "foo" 17..20
Expr(Call) "(" 20..21
Expr(CallEnd) ")" 21..22
Expr(Call) "(" 22..23
Expr(CallEnd) ")" 23..24
EndOfExpr ";" 24..25
FileEnd
