toolchain/ouro_parse/snapshots/ouro_parse_test__i32_and_type_keywords.snap
---
source: toolchain/ouro_parse/ouro_parse_test.rs
expression: "case! { fn Vec(T: type, len: i32) {} }"
---
FileBegin
Fn "fn" 0..2
FnIdent "Vec" 3..6
FnParams "(" 6..7
FnParamsIdent "T" 7..8
Expr(TypeKeyword) "type" 10..14
EndOfExpr "," 14..15
FnParamsIdent "len" 16..19
Expr(I32Keyword) "i32" 21..24
EndOfExpr ")" 24..25
FnParamsEnd ")" 24..25
FnBodyBegin "{" 26..27
FnBodyEnd "}" 27..28
FileEnd
