toolchain/ouro_parse/snapshots/ouro_parse_test__str.snap
---
source: toolchain/ouro_parse/ouro_parse_test.rs
expression: "case! { const Name = \"Quinn\"; }"
---
FileBegin
Const "const" 0..5
ConstIdent "Name" 6..10
ConstEq "=" 11..12
Expr(Str) "\"Quinn\"" 13..20
EndOfExpr ";" 20..21
FileEnd
